style/cfg: Configure codeblocks to different color scheme, make it overflow correctly

--- a/themes/raychen.io/static/css/style.css
+++ b/themes/raychen.io/static/css/style.css
@@ -126,10 +126,18 @@ code:not([data-lang]) {
   background-color: #000;
 }
 
+.highlight {
+  overflow: scroll;
+}
+
 .highlight pre {
   padding: 1em;
-  overflow: scroll;
   font-size: 1rem;
+}
+
+.highlight code {
+  padding: unset;
+  background-color: unset;
 }
 
 blockquote {
